--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,14 +18,23 @@ spring:
           max-idle: 8
           min-idle: 0
     timeout: 3000ms
+
 mybatis:
   mapper-locations:
     - classpath:mapper/*.xml
     - classpath*:com/**/mapper/*.xml
 
+# 自定义redis key
 redis:
   key:
     prefix:
       authCode: "portal:authCode"
     expire:
       authCode: 120
+
+# 自定义jwt key
+jwt:
+  tokenHeader: Authorization #JWT存储的请求头
+  secret: mySecret #JWT加密使用的密匙
+  expiration: 604800 #JWT的过期时间（60*60*24*7）
+  tokenHead: Bearer #JWT负载中拿到开头
