Realize product search with elasticSearch.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,12 @@ spring:
           max-idle: 8
           min-idle: 0
     timeout: 3000ms
+  data:
+    elasticsearch:
+      repositories:
+        enabled: true
+      cluster-nodes: 127.0.0.1:9300
+      cluster-name: elasticsearch
 
 mybatis:
   mapper-locations:
