Integrate MongoDB with user browsing history.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,10 @@ spring:
         enabled: true
       cluster-nodes: 127.0.0.1:9300
       cluster-name: elasticsearch
+    mongodb:
+      host: localhost
+      port: 27017
+      database: mall-port
 
 mybatis:
   mapper-locations:
